# squash-tui

./: Cargo.toml  LICENSE  README.md  devenv.nix
src/: main.rs
