[package]
name = "squash-tui"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Aleksi Suoranta <aleksi.suoranta@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
git2 = "0.20.3"
ratatui = "0.30.0-beta"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
